# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-04-11 mmichaud <m.michael.michaud@orange.fr>
  * Fix a bug preventing updates with WritableDataSource in some cases

2016-04-09 mmichaud <m.michael.michaud@orange.fr>
  * Improve MakeValid plugin (correction of geometries in place)

2016-04-06 mmichaud <m.michael.michaud@orange.fr>
  * upgrade set-attribute plugin to v0.7.1
  * fix a regression introduced after 1.9.1 release in shapefile (cpg) reader

2016-04-05 ede
  * fix bug 414 "Image Layer Resizing lost after loading project"
    jml save files for referenced images ignored their saved geometry on reopen

2016-04-01 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade cts plugin to 1.4.0 (add finnish projections, fix bugs)

2016-03-28 ede
  * upgraded junit & imageio-ext to latest stable versions

2016-03-26 mmichaud <m.michael.michaud@orange.fr>
  * Update JDOM dependency to JDOM2 (used in java2xml)

2016-03-26 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Extended Sextante Raster Capabilities to read Bitmap (BMP) and JP2000 
   (JP2) raster files

2016-03-24 mmichaud <m.michael.michaud@orange.fr>
  * add build-helper-maven-plugin in maven to be able to run tests located
    in jumptest package

2016-03-23 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * emhenced version of RasterImageLayerPropertiesPlugIn: 
    1) New info HTML table "a la" GvSIG style
    2) Faster info checker (all cell statistic related to Sextante raster 
       image have been removed as alredy embedded into Raster Statistic 
       plugin
    3) Added a limited projection checker < see other details into 
    org.openjump.core.ui.util.ProjUtils.class
    4) Added a Raster Transparency panel

2016-03-15 mmichaud <m.michael.michaud@orange.fr>
  * Switch compiler source and target to java 1.7